--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Environment variables - NEVER commit these
+.env
+.env.*
+.env.local
+.env.*.local
+
 # Avoid accidental upload of the Sketch and Figma design files
 #####################################################
 ## Please do not remove lines 5 and 6 - thanks! 🙂 ##
